{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 398,
  "lineage": "0fa6e60b-30a6-2e15-e4f4-98abb268c89a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b0118f7af4bc8835",
            "domain": "vpc",
            "id": "eipalloc-04f573cdbd2d7a935",
            "instance": "i-0f2f78641700770fd",
            "network_interface": "eni-0bd4232b223cb5507",
            "private_dns": "ip-10-1-10-167.ec2.internal",
            "private_ip": "10.1.10.167",
            "public_dns": "ec2-3-224-71-0.compute-1.amazonaws.com",
            "public_ip": "3.224.71.0",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.jenkins_server",
            "aws_internet_gateway.main_aig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0880d245b4770ee04",
            "arn": "arn:aws:ec2:us-east-1:179966331834:instance/i-0f2f78641700770fd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f2f78641700770fd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh_webserver",
            "monitoring": false,
            "primary_network_interface_id": "eni-0bd4232b223cb5507",
            "private_dns": "ip-10-1-10-167.ec2.internal",
            "private_ip": "10.1.10.167",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b349ae0984fc524f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f61873e25c667f15",
            "tags": {
              "Name": "jenkins_demo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c50cbc62e76a70ec"
            ]
          },
          "depends_on": [
            "aws_key_pair.ssh_default",
            "aws_security_group.connection_allow",
            "aws_subnet.main_subnet",
            "data.aws_ami.latest_jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_aig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-029a11d7b4d0d940f",
            "owner_id": "179966331834",
            "tags": {
              "Name": "Gateway Terraform Demo"
            },
            "vpc_id": "vpc-0f165b771348da510"
          },
          "depends_on": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main_allow",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05cb6517e6efaf982",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "owner_id": "179966331834",
            "subnet_id": null,
            "subnet_ids": [],
            "tags": null,
            "vpc_id": "vpc-0f165b771348da510"
          },
          "depends_on": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dc7c03fa3f456b27",
            "owner_id": "179966331834",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-029a11d7b4d0d940f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table Terraform Demo"
            },
            "vpc_id": "vpc-0f165b771348da510"
          },
          "depends_on": [
            "aws_internet_gateway.main_aig",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_rta_subnet_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017051fedd919543d",
            "route_table_id": "rtb-0dc7c03fa3f456b27",
            "subnet_id": "subnet-0f61873e25c667f15"
          },
          "depends_on": [
            "aws_route_table.default_route",
            "aws_subnet.main_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "connection_allow",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179966331834:security-group/sg-0c50cbc62e76a70ec",
            "description": "Allows all ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c50cbc62e76a70ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Terraform Demo - Allow ssh \u0026 http traffic",
            "name_prefix": null,
            "owner_id": "179966331834",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0f165b771348da510"
          },
          "depends_on": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179966331834:subnet/subnet-0f61873e25c667f15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.10.0/24",
            "id": "subnet-0f61873e25c667f15",
            "map_public_ip_on_launch": false,
            "owner_id": "179966331834",
            "tags": {
              "Name": "Subnet Terraform Demo"
            },
            "vpc_id": "vpc-0f165b771348da510"
          },
          "depends_on": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:179966331834:vpc/vpc-0f165b771348da510",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08a32588c53b1122e",
            "default_route_table_id": "rtb-05d79319219967fe0",
            "default_security_group_id": "sg-094167d0a5273abc9",
            "dhcp_options_id": "dopt-d5d038ae",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f165b771348da510",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05d79319219967fe0",
            "owner_id": "179966331834",
            "tags": {
              "Name": "VPC Terraform Demo"
            }
          }
        }
      ]
    }
  ]
}